--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,40 +1,26 @@
+body {
+  box-sizing: border-box;
+  margin: 0;
+}
+
 .wrapper {
   min-height: 100vh;
-  font-family: "Roboto Slab", serif;
+  width: 100%;
+  font-family: "CynthoNextSlab-Light", "Montserrat", sans-serif;
   font-weight: 300;
-  color: #eee;
+  color: white;
   position: relative;
 }
 
 section {
+  box-sizing: border-box;
   height: 100vh;
   font-size: 40px;
   font-weight: 100;
-  background-color: #22A7F0;
+  background-color: #232946;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-section:nth-child(1) {
-  background: white;
-}
-section:nth-child(2) {
-  background: #F64747;
-}
-section:nth-child(3) {
-  background: #22A7F0;
-}
-section:nth-child(4) {
-  background: #F9690E;
-}
-section:nth-child(5) {
-  background: #9B59B6;
-}
-section:nth-child(6) {
-  background: #03C9A9;
-}
-section:nth-child(7) {
-  background: #ffcc00;
 }
 
 .nav__wrapper {
