--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -32,7 +32,7 @@ section {
   &__wrapper {
     position: fixed;
     height: 100%;
-    padding: 30px;
+    padding: 24px;
 
     display: flex;
     flex-flow: column nowrap;
@@ -43,22 +43,12 @@ section {
     margin: 0 0 100px 30px;
   }
   &__counter {
-    font-size: 24px;
+    font-size: 18px;
     transition: all 0.15s ease-out;
-  }
-  &__title {
-    font-size: 32px;
-    font-weight: 300;
-    margin: 0 0 0.25em;
-    width: 300px;
-    height: 0;
-    overflow: hidden;
-    opacity: 0;
-    transition: height 0.3s ease-out, opacity 0.2s ease-out;
   }
   &__body {
     font-weight: 100;
-    font-size: 18px;
+    font-size: 14px;
     width: 300px;
     height: 0;
     overflow: hidden;
@@ -70,6 +60,7 @@ section {
     position: relative;
     transition: all 0.3s ease-out;
     margin-bottom: 1em;
+    list-style-type: none;
 
     &:after {
       content: '';
@@ -103,7 +94,7 @@ section {
       padding-left: 1em;
 
       &:after {
-        width: 35px;
+        width: 30px;
         height: 400px;
         top: 35px;
       }
