--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: "Montserrat";
+  src: url("./../fonts/Montserrat-regular.ttf");
+}
 body {
   box-sizing: border-box;
   margin: 0;
@@ -6,8 +10,8 @@ body {
 .wrapper {
   min-height: 100vh;
   width: 100%;
-  font-family: "CynthoNextSlab-Light", "Montserrat", sans-serif;
-  font-weight: 300;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
   color: white;
   position: relative;
 }
@@ -20,7 +24,7 @@ section {
   background-color: #232946;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .nav__wrapper {
@@ -35,12 +39,13 @@ section {
   margin: 0 0 100px 30px;
 }
 .nav__counter {
-  font-size: 18px;
+  font-size: 20px;
   transition: all 0.15s ease-out;
 }
 .nav__body {
   font-weight: 100;
-  font-size: 14px;
+  font-size: 12px;
+  line-height: 14px;
   width: 300px;
   height: 0;
   overflow: hidden;
@@ -68,11 +73,12 @@ section {
   display: block;
   padding: 0;
   color: #fff;
+  text-decoration: none;
   transition: all 0.15s ease-out;
 }
 .nav li a:hover {
   background-color: transparent;
-  padding-left: 1em;
+  padding-left: 0.5em;
 }
 .nav li a:focus {
   background-color: transparent;
@@ -84,15 +90,10 @@ section {
 .nav li.active:after {
   width: 30px;
   height: 400px;
-  top: 35px;
+  top: 10px;
 }
 .nav li.active .nav__counter {
-  font-size: 48px;
-}
-.nav li.active .nav__title {
-  height: 40px;
-  opacity: 1;
-  overflow: visible;
+  font-size: 20px;
 }
 .nav li.active .nav__body {
   height: 100px;
