--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,6 +3,15 @@
   src: url("./../fonts/Montserrat-regular.ttf");
 }
 
+@keyframes fall {
+  0% {
+    transform: translateY(-100vh);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
 body {
   box-sizing: border-box;
   margin: 0;
@@ -15,18 +24,21 @@ body {
   font-weight: 400;
   z-index: 0;
 
-  //-moz-box-shadow:0 0 5px white;
-  //-webkit-box-shadow:0 0 5px white;
-  //text-shadow:0 0 5px white;
+  -moz-box-shadow:0 0 5px white;
+  -webkit-box-shadow:0 0 5px white;
+  text-shadow:0 0 5px white;
   color: white;
   position: relative;
 
   .section1, .section2, .section3 {
 
     .container {
+      //align-items: flex-start;
       font-size: 18px;
-      max-width: 60vw;
-      background-color: lightgrey;
+      height: 100%;
+      width: 60vw;
+      //background-color: lightgrey;
+      border: 1px solid black;
 
       h1 {
         //display: block;
@@ -34,6 +46,44 @@ body {
         font-size: 52px;
         margin: auto;
       }
+    }
+  }
+
+  .section2 {
+
+    .container {
+
+      span {
+        margin: 0 auto;
+        display: block;
+        cursor: pointer;
+      }
+
+      .modal {
+        display: none;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        position: fixed;
+        height: 50vh;
+        width: 30%;
+        left: 50% - 15%;
+        top: 25vh;
+        margin: 0;
+        padding: 20px;
+        background: whitesmoke;
+        border: 1px solid #333;
+        border-radius: 20px;
+        z-index: 9999;
+        transition: margin-top 1s ease-in;
+        animation: fall 0.5s 1;
+
+        .form-title {
+          color: #232946;
+        }
+      }
+
+
     }
   }
 }
@@ -140,4 +190,13 @@ section {
 
   }
 
+}
+
+.overflow {
+  width: 100%;
+  height: 100%;
+  z-index: 9998;
+  background: rgba(0, 0, 0, 0.7);
+  position: absolute;
+  top: 0;
 }
