--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -60,18 +60,19 @@ body {
       }
 
       .modal {
+        color: #232946;
         display: none;
         flex-direction: column;
         align-items: center;
         justify-content: center;
         position: fixed;
-        height: 50vh;
+        height: 30vh;
         width: 30%;
         left: 50% - 15%;
-        top: 25vh;
+        top: 35vh;
         margin: 0;
         padding: 20px;
-        background: whitesmoke;
+        background: #b8c1ec;
         border: 1px solid #333;
         border-radius: 20px;
         z-index: 9999;
@@ -80,6 +81,47 @@ body {
 
         .form-title {
           color: #232946;
+          width: 100%;
+          font-size: 35px;
+          font-weight: 700;
+          margin-bottom: 40px;
+          text-align: center;
+        }
+
+        .form-body {
+          display: flex;
+          flex-direction: column;
+          justify-content: space-around;
+          height: 400px;
+          width: 500px;
+
+          &-login, &-password, .btn-submit {
+            background-color: #fffffe;
+            box-sizing: border-box;
+            display: block;
+            height: 40px;
+            margin-bottom: 10px;
+            width: 100%;
+            border: none;
+            border-radius: 5px;
+          }
+
+          .btn-submit {
+            font-size: 20px;
+            margin-top: 30px;
+            transition: 0.8s;
+
+            &:hover {
+              background-color: #e9a4b1;
+              border: 1px solid #E79DAB;
+              cursor: pointer;
+              transition: 0.1s;
+            }
+
+            &:focus {
+              outline: none;
+            }
+          }
         }
       }
 
