continue refactoring and rework of application logic

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -142,7 +142,7 @@ body {
             transition: 0.8s;
 
             &:hover {
-              background-color: #e9a4b1;
+              background-color: #eebbc3;
               border: 1px solid #E79DAB;
               cursor: pointer;
               transition: 0.1s;
